syntax = "proto3";

message TriggerPredicate {
  // represents the trigger condition
  string name = 1;
  // use a string instead of enum here 
  // since the predicate operator is likely to be changed/added frequently
  // while the serialization protocol shouldn't change frequently
  string type = 2; 
  map<string, bytes> kwargs = 3; // arguments
}

message Processor {
  // represent feature extraction modules
  // input are images
  // outputs are key/value pairs that represents application state
  string name = 1;
  // use a string to represent a type instead of enum
  // because the processors should be easily added/changed
  // without changing the serialization protocol
  string type = 2;
  map<string, bytes> kwargs = 3; // arguments
}

message Transition {
  string name = 1;
  repeated TriggerPredicate trigger_predicates = 2; // function name of the trigger condition
  Instruction instruction = 3;
  string next_state = 4;
}

message Instruction {
  string audio = 1; // audio in text format.
  bytes image = 2;
  bytes video = 3;
}

message State {
  string name = 1;
  repeated Processor processors = 2; // extract features
  repeated Transition transitions = 3;
}

message StateMachine {
  string name = 1;
  repeated State states = 2; // all states
  map<string, bytes> assets = 3; // shared assets
  string start_state = 4;
}
